Add simple bayes model

--- a/src/testing_components.ipynb
+++ b/src/testing_components.ipynb
@@ -95,7 +95,6 @@
     "\n",
     "# print(list(reversed(range(32))))\n",
     "\n",
-    "\n",
     "def uint32_to_32_bits(unit32_value) -> np.array:\n",
     "    return np.array([(unit32_value >> i) & 0x00000001 for i in reversed(range(32))], dtype=np.bool_)\n",
     "\n",
@@ -467,6 +466,57 @@
     "\n",
     "    a1, b1 = make_a_b(sum_, a1)\n",
     "    a2, b2 = make_a_b(sum_, a2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a1=5, b1=3, result=0.3187447407122985\n"
+     ]
+    }
+   ],
+   "source": [
+    "def diff_pdf(theta, a1, b1, a2, b2):\n",
+    "    return np.maximum(0, beta.pdf(theta, a2, b2) - beta.pdf(theta, a1, b1))\n",
+    "\n",
+    "a2=6\n",
+    "b2=2\n",
+    "a1=5\n",
+    "b1=3\n",
+    "\n",
+    "result, _ = quad(partial(diff_pdf, a1=a1, b1=b1, a2=a2, b2=b2), 0, 1)\n",
+    "print(f'{a1=}, {b1=}, {result=}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "from functools import partial\n",
+    "\n",
+    "def multiply(a, b):\n",
+    "    return a * b\n",
+    "\n",
+    "double = partial(multiply, b=2)\n",
+    "\n",
+    "result = double(10)\n",
+    "print(result)"
    ]
   }
  ],
